--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "homepage": "https://erica-chiu.github.io/website",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.0.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
